# python-intrusive-collections

./: LICENSE  README.md  pyproject.toml
examples/: demo.py  demo_set.py
src/intrusive/: __init__.py  list.py  set.py
tests/: conftest.py  models.py  test_api_styles.py  test_edge_cases.py  test_gc.py  test_hook.py  test_list_ops.py  test_multi_list.py  test_multiset.py  test_set.py
tests/perf/: owned_list.py  test_comparison.py
