[project]
name = "intrusive"
version = "0.1.0"
description = "Intrusive lists and sets for Python, inspired by Boost.Intrusive"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Konstantin Gorokhovskiy" }]
requires-python = ">=3.10"
keywords = [
    "intrusive",
    "intrusive-containers",
    "linked-list",
    "doubly-linked-list",
    "ordered-set",
    "multiset",
    "red-black-tree",
    "data-structures",
    "boost-intrusive",
    "collections",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/gorokhovskiy/python-intrusive-collections"
Repository = "https://github.com/gorokhovskiy/python-intrusive-collections"
Issues = "https://github.com/gorokhovskiy/python-intrusive-collections/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intrusive"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-m 'not perf and not slow'"
markers = [
    "perf: performance comparison benchmarks (often slow / memory-heavy)",
    "slow: long-running tests",
]
